welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
 
	for (i<-0 to nums.length -1){
    if (nums(i)==lookingFor){
    	var nombre=i
    }
  	
  }
  return nombre
}